Fixed fade out spacing/position

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -148,13 +148,27 @@ img {
   /* padding-top: min(25%, 10em);
   padding-bottom: min(25%, 10em); */
   padding: 2em;
+  opacity: 1;
 }
+
+/* .content-container-mask {
+  -webkit-mask: linear-gradient(transparent, black);
+  mask: linear-gradient(transparent, black);
+
+  -webkit-mask-size: 90% 70%;
+        mask-size: 90% 70%;
+-webkit-mask-repeat: no-repeat;
+        mask-repeat: no-repeat;
+-webkit-mask-position: center;
+        mask-position: center;
+} */
 
 .content-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+
   user-select: none;
   -webkit-user-select: none; /*Safari*/
   -moz-user-select: none; /*Firefox*/
@@ -201,6 +215,14 @@ footer {
 
 
 /* All temp animations here */
+
+.fade-in-1 {
+  animation: fadeIn 1s;
+  -webkit-animation: fadeIn 1s;
+  -moz-animation: fadeIn 1s;
+  -o-animation: fadeIn 1s;
+  -ms-animation: fadeIn 1s;
+}
 .fade-in-2 {
   animation: fadeIn 2s;
   -webkit-animation: fadeIn 2s;
@@ -241,7 +263,16 @@ footer {
   100% { opacity: 1; }
 }
 
-.fade-out {
+
+.fade-out-1 {
+  animation: fadeOut 1s;
+  -webkit-animation: fadeOut 1s;
+  -moz-animation: fadeOut 1s;
+  -o-animation: fadeOut 1s;
+  -ms-animation: fadeOut 1s;
+}
+
+.fade-out-2 {
   animation: fadeOut 2s;
   -webkit-animation: fadeOut 2s;
   -moz-animation: fadeOut 2s;
